# Neuratree

./: .gitignore  Makefile  README.md  Turkish-Roadmap.md  pyproject.toml  requirements.txt
benchmarks/: token_benchmark.py
dnt/: __init__.py  cli.py  config.py
dnt/adapters/: __init__.py  base.py
dnt/core/: __init__.py  buffer.py  dnt.py  models.py  tree.py
dnt/data/: loader.py
dnt/data/seeds/: climate.json  company.json  demo.json  film_studio.json  hospital.json  space.json  technology.json  university.json
dnt/integrations/: claude_chat.py  openai_chat.py
dnt/learning/: ghsom.py  hebbian.py  triplet.py
dnt/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
dnt/memory/: consolidate.py  snapshot.py
dnt/ui/: app.html  dashboard.py  server.py
tests/: test_core.py  test_learning.py  test_llm_adapters.py  test_memory.py  test_ui.py
