[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuratree"
version = "0.1.0"
description = "Biologically-inspired plug-and-play memory engine"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "networkx>=3.0",
    "openai>=1.0",
    "spacy>=3.7",
    "streamlit>=1.30",
    "pyvis>=0.3",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]

[project.scripts]
dnt = "dnt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dnt*", "benchmarks*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
